--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,19 @@
 version: 2.1
 
+orbs:
+  node: circleci/node@x.y
+
 jobs:
-  build:
+  install-node-example:
     docker:
-      -image: cimg/node:19.9.1
-    working__directory: ~/app
-    enviroment:
-      MY_VAR: "sample-value"
+      - image: cimg/base:stable
     steps:
-      - run: echo $MY_VAR
+      - checkout
+      - node/install:
+          install-yarn: true
+          node-version: '16.13'
       - run: node --version
-      - run: npm install
+workflows:
+  test_my_app:
+    jobs:
+      - install-node-example
