--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/node:19.9.1
+      - image: node:19.9.1
     working_directory: ~/app
     environment:
       MY_VAR: "sample-value"
