--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ jobs:
     working_directory: ~/app
     steps:
       - checkout
+      - run:
+          name: Install Docker Credential Helper
+          command: |
+            sudo apt-get update && sudo apt-get install -y gnupg2 pass
+            curl -fsSL https://github.com/docker/docker-credential-helpers/releases/download/v0.6.3/docker-credential-secretservice-v0.6.3-amd64.tar.gz | tar xv -C /tmp
+            sudo mv /tmp/docker-credential-secretservice /usr/local/bin/docker-credential-secretservice
+            sudo chmod +x /usr/local/bin/docker-credential-secretservice
+            mkdir -p ~/.docker && echo '{"credsStore": "secretservice"}' > ~/.docker/config.json
       - setup_remote_docker:
           version: 20.10.14
       - run:
